exports[`Checked`] = `
<div
  className="content-wrapper">
  <div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Checked
          </h2>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="slds-form-element">
          <div
            className="slds-form-element__control">
            <label
              className="slds-checkbox--toggle slds-grid">
              <span
                className="slds-form-element__label slds-m-bottom--none" />
              <input
                aria-describedby="toggle-desc"
                checked={true}
                name="checkbox"
                onChange={[Function]}
                type="checkbox" />
              <span
                aria-live="assertive"
                className="slds-checkbox--faux_container">
                <span
                  className="slds-checkbox--faux" />
                <span
                  className="slds-checkbox--on">
                  Enabled
                </span>
                <span
                  className="slds-checkbox--off">
                  Disabled
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderTop": "1px solid rgb(238, 238, 238)",
              "marginTop": "10px",
              "padding": "16px 0",
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Toggle control with checked status
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    checked
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          change()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOff
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOn
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controlled with knobs`] = `
<div
  className="content-wrapper">
  <div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Controlled with knobs
          </h2>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="slds-form-element">
          <div
            className="slds-form-element__control">
            <label
              className="slds-checkbox--toggle slds-grid">
              <span
                className="slds-form-element__label slds-m-bottom--none">
                Toggle Label
              </span>
              <input
                aria-describedby="toggle-desc"
                checked={undefined}
                disabled={undefined}
                name="checkbox"
                onChange={[Function]}
                type="checkbox" />
              <span
                aria-live="assertive"
                className="slds-checkbox--faux_container">
                <span
                  className="slds-checkbox--faux" />
                <span
                  className="slds-checkbox--on">
                  Enabled
                </span>
                <span
                  className="slds-checkbox--off">
                  Disabled
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderTop": "1px solid rgb(238, 238, 238)",
              "marginTop": "10px",
              "padding": "16px 0",
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Toggle controlled with knobs
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    label
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        Toggle Label
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    required
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    error
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    checked
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    disabled
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          change()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOff
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOn
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default`] = `
<div
  className="content-wrapper">
  <div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Default
          </h2>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="slds-form-element">
          <div
            className="slds-form-element__control">
            <label
              className="slds-checkbox--toggle slds-grid">
              <span
                className="slds-form-element__label slds-m-bottom--none" />
              <input
                aria-describedby="toggle-desc"
                name="checkbox"
                onChange={[Function]}
                type="checkbox" />
              <span
                aria-live="assertive"
                className="slds-checkbox--faux_container">
                <span
                  className="slds-checkbox--faux" />
                <span
                  className="slds-checkbox--on">
                  Enabled
                </span>
                <span
                  className="slds-checkbox--off">
                  Disabled
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderTop": "1px solid rgb(238, 238, 238)",
              "marginTop": "10px",
              "padding": "16px 0",
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Toggle control
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          change()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOff
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOn
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Disabled`] = `
<div
  className="content-wrapper">
  <div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Disabled
          </h2>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="slds-form-element">
          <div
            className="slds-form-element__control">
            <label
              className="slds-checkbox--toggle slds-grid">
              <span
                className="slds-form-element__label slds-m-bottom--none" />
              <input
                aria-describedby="toggle-desc"
                disabled={true}
                name="checkbox"
                onChange={[Function]}
                type="checkbox" />
              <span
                aria-live="assertive"
                className="slds-checkbox--faux_container">
                <span
                  className="slds-checkbox--faux" />
                <span
                  className="slds-checkbox--on">
                  Enabled
                </span>
                <span
                  className="slds-checkbox--off">
                  Disabled
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderTop": "1px solid rgb(238, 238, 238)",
              "marginTop": "10px",
              "padding": "16px 0",
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Toggle control with disabled status
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    disabled
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          change()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOff
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOn
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Status`] = `
<div
  className="content-wrapper">
  <div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Status
          </h2>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="slds-form-element">
          <div
            className="slds-form-element__control">
            <label
              className="slds-checkbox--toggle slds-grid">
              <span
                className="slds-form-element__label slds-m-bottom--none" />
              <input
                aria-describedby="toggle-desc"
                name="checkbox"
                onChange={[Function]}
                type="checkbox" />
              <span
                aria-live="assertive"
                className="slds-checkbox--faux_container">
                <span
                  className="slds-checkbox--faux" />
                <span
                  className="slds-checkbox--on">
                  On
                </span>
                <span
                  className="slds-checkbox--off">
                  Off
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "padding": "16px",
        }
      }>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderTop": "1px solid rgb(238, 238, 238)",
              "marginTop": "10px",
              "padding": "16px 0",
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": "15px",
              }
            }>
            Toggle control with status of Off/On
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          change()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    statusOff
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        Off
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    statusOn
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        On
                        \"
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOff
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    statusOn
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
